--- a/src/stylesheets/constants/_typography.scss
+++ b/src/stylesheets/constants/_typography.scss
@@ -1,5 +1,6 @@
-
-$avenir: "Avenir", "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+//
+//
+// FONT-FACES
 
 @font-face {
   font-family: 'Avenir';
@@ -23,4 +24,32 @@ $avenir: "Avenir", "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neu
 
   font-style:   normal;
   font-weight:  400;
+}
+
+$avenir: "Avenir", "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+
+
+//
+//
+// BASIC TYPOGRAPHY STYLES
+a {
+  text-decoration: none;
+}
+
+.title {
+  color: $grey;
+
+  &.-main {
+    display: inline-block;
+    text-align: center;
+    text-transform: uppercase;
+
+    &::after {
+      content: '';
+      display: block;
+      background: $grey;
+      height: 3px;
+      width: 100%;
+    }
+  }
 }
